# 0g-da-retriever

./: Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md
client/: Cargo.toml
client/src/: main.rs
contract-provider/: Cargo.toml  api.rs  build.rs
contract-provider/abi/: IDASigners.json
contract-provider/src/: lib.rs
grpc/: Cargo.toml  build.rs
grpc/proto/: retriever.proto
grpc/src/: lib.rs  service.rs
retriever/: Cargo.toml
retriever/src/: config.rs  main.rs
run/: config.toml
signer-provider/: Cargo.toml
signer-provider/src/: lib.rs
