[workspace]
resolver = "2"
members = [ "client",
    "contract-provider",
    "grpc",
    "retriever",
    "signer-provider",
]

[workspace.dependencies]
grpc = { path = "./grpc" } 
contract-provider = { path = "./contract-provider" } 
signer-provider = { path = "./signer-provider" } 
task_executor = { git = "https://github.com/0glabs/0g-storage-node.git", rev = "ef82f643932ad0a2ec28acce47913df187afb77d" }
