[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
prost = "0.12.6"
tonic = "0.11.0"
tracing = "0.1.40"
tokio = { version = "1.38.0", features = ["full"] }
contract-provider = { workspace = true }
signer-provider = { workspace = true }
futures = "0.3.30"
task_executor = { workspace = true }
zg-da-recovery = { workspace = true }
ethers = "2.0.14"

[build-dependencies]
tonic-build ="0.11.0"
