[package]
name = "retriever"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ethers = "2.0.14"
anyhow = "1.0.86"
config = "0.14.0"
clap = { version = "4.5.7", features = ["cargo"] }
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
exit-future = "0.2.0"

grpc = { workspace = true }
contract-provider = { workspace = true }
signer-provider = {workspace = true}
task_executor = { workspace = true }
